Fixed spacing of title and grid for Infor

--- a/BankListWebApp/index.css
+++ b/BankListWebApp/index.css
@@ -1,45 +1,45 @@
 #searchButton {
-    background-color: #00b4d8;
-    border: 1px solid #00b4d8;
-    border-radius: 6px;
-    color: white;
-    cursor: pointer;
-    font-size: 14px;
-    padding: 6px 16px;
-    text-align: center;
+  background-color: #00b4d8;
+  border: 1px solid #00b4d8;
+  border-radius: 6px;
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 6px 16px;
+  text-align: center;
 }
 
-    #searchButton:hover {
-        background-color: #0077b6;
-    }
+  #searchButton:hover {
+    background-color: #0077b6;
+  }
 
-    #searchButton:active {
-        background-color: #3077b6;
-    }
+  #searchButton:active {
+    background-color: #3077b6;
+  }
 
 #inputField {
-    border: 2px solid #00b4d8;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 12px;
-    padding: 6px;
+  border: 2px solid #00b4d8;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 6px;
 }
 
-    #inputField:focus {
-        border-color: #0077b6;
-        outline: none;
-    }
+  #inputField:focus {
+    border-color: #0077b6;
+    outline: none;
+  }
 
 .text {
-    color: #0077b6;
-    font-size: 16px;
+  color: #0077b6;
+  font-size: 16px;
 }
 
 .bankGrid {
   display: grid;
   grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
   gap: 10px;
-  width: 25%;
+  width: 100%;
 }
 
 .bankGrid-title {
@@ -58,19 +58,19 @@
   padding: 5px;
 }
 
-    .bankGrid-row > div {
-        flex: 1;
-        padding: 5px;
-        text-align: center;
-    }
-    
-    .bankGrid-row:nth-child(even) {
-      background-color: #e5f2f7;
-    }
-    
-    .bankGrid-row:nth-child(odd) {
-      background-color: #d6ebf2;
-    }
+  .bankGrid-row > div {
+    flex: 1;
+    padding: 5px;
+    text-align: center;
+  }
+  
+  .bankGrid-row:nth-child(even) {
+    background-color: #e5f2f7;
+  }
+  
+  .bankGrid-row:nth-child(odd) {
+    background-color: #d6ebf2;
+  }
 
 .bankGrid-header {
   font-weight: bold;
@@ -83,11 +83,11 @@
   padding: 5px;
 }
 
-  .bankGrid-header > div {
-      flex: 1;
-      padding: 5px;
-      text-align: center;
-  }
+.bankGrid-header > div {
+  flex: 1;
+  padding: 5px;
+  text-align: center;
+}
 
 .loader {
   border: 6px solid #f3f3f3;
